# QT-Banking-System-Client

./: .clang-uml  .gitmodules  AdminWidget_8h.html  AdminWidget_8h__dep__incl.map  AdminWidget_8h__dep__incl.md5  AdminWidget_8h__incl.map  AdminWidget_8h__incl.md5  AdminWidget_8h_source.html  AppManager_8h.html  AppManager_8h__incl.map  AppManager_8h__incl.md5  AppManager_8h_source.html  BaseDialog_8h.html  BaseDialog_8h__dep__incl.map  BaseDialog_8h__dep__incl.md5  BaseDialog_8h__incl.map  BaseDialog_8h__incl.md5  BaseDialog_8h_source.html  CMakeLists.txt  ClientHandler_8h_source.html  CreateUserDialog_8h.html  CreateUserDialog_8h__incl.map  CreateUserDialog_8h__incl.md5  CreateUserDialog_8h_source.html  Makefile  README.md  RequestManager_8h.html  RequestManager_8h__dep__incl.map  RequestManager_8h__dep__incl.md5  RequestManager_8h__incl.map  RequestManager_8h__incl.md5  RequestManager_8h_source.html  ResponseManager_8h_source.html  UIManager_8h.html  UIManager_8h__dep__incl.map  UIManager_8h__dep__incl.md5  UIManager_8h__incl.map  UIManager_8h__incl.md5  UIManager_8h_source.html  UpdateEmailDialog_8h.html  (+329 more)
app/: CMakeLists.txt  main.cpp
cmake/: QTModules.cmake
docs/: stateDiagram.puml
resources/: Banking_System_Client.desktop  resources.qrc
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+36 more)
src/: CMakeLists.txt
src/AppManager/: AppManager.cpp  AppManager.h  CMakeLists.txt  UIManager.cpp  UIManager.h
src/Client/: ClientHandler.cpp  ClientHandler.h  tcpclient.cpp  tcpclient.h
src/Dialogs/: BaseDialog.cpp  BaseDialog.h  CMakeLists.txt  CreateUserDialog.cpp  CreateUserDialog.h  UpdateEmailDialog.cpp  UpdateEmailDialog.h  UpdatePasswordDialog.cpp  UpdatePasswordDialog.h  UpdateUserDialog.cpp  UpdateUserDialog.h  ValidationStrategy.h
src/LoginWidget/: CMakeLists.txt  loginwidget.cpp  loginwidget.h  mainwindow.ui  resources.qrc
src/RequestManager/: CMakeLists.txt  RequestManager.h  ResponseManager.h
src/UserWidget/: CMakeLists.txt  UpdateEmailDialog.cpp  UpdateEmailDialog.h  UpdatePasswordDialog.cpp  UpdatePasswordDialog.h  UserWidget.cpp  UserWidget.h
src/Widgets/: CMakeLists.txt
src/Widgets/AdminWidget/: AdminWidget.cpp  AdminWidget.h  CMakeLists.txt
src/Widgets/LoginWidget/: CMakeLists.txt  loginwidget.cpp  loginwidget.h
src/Widgets/UserWidget/: CMakeLists.txt  UserWidget.cpp  UserWidget.h
src/requestModule/: RequestManager.cpp  RequestManager.h  ResponseManager.cpp  ResponseManager.h
(+491 files in other folders)
