# CMakelists.txt file for src directory

# Add sub directories of
add_subdirectory(AppManager)  # AppManager Module
add_subdirectory(Client)  # Client Module
add_subdirectory(requestModule)  # requestModule Module
add_subdirectory(Dialogs)
add_subdirectory(Widgets)
############# etc.... add any other sub directories here
